<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="380dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="81dp"
        android:background="#C9ECE9E9"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_9"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPoint"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_6"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:text="@string/_3"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:text="@string/_2"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_8"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_5"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="113dp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/_0"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAC"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="114dp" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/_point"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEqa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/_subtraction"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEqa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/_div"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMul"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_multiplication"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp" />

    <Button
        android:id="@+id/buttonEqa"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:text="@string/_equally"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_addition"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSub"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="307dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:text="@string/_1"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_7"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPerc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/_4"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp" />

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="184dp"
        android:layout_height="54dp"
        android:text="@string/_AC"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/buttonPerc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/_percent"
        android:textSize="@dimen/number_text_size"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAC"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="18dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>